k8/wrapper.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wrapper-deployment
  labels:
    app: wrapper
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wrapper
  template:
    metadata:
      labels:
        app: wrapper
    spec:
      containers:
      - name: wrapper
        image: wrapper-image:v2
        imagePullPolicy: Never
        ports:
        - containerPort: 8081
---

apiVersion: v1
kind: Service
metadata:
  name: wrapper-service
spec:
  type: ClusterIP
  selector:
    app: wrapper
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
