k8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wrapper-ingress
spec:
  ingressClassName: nginx

  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - path: /wrapper
        pathType: Prefix
        backend:
          service:
            name: wrapper-service
            port:
              number: 8081
